--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"@nestjs/common": "^9.0.0",
 		"@nestjs/core": "^9.0.0",
 		"@nestjs/platform-express": "^9.0.0",
+		"@nestjs/schedule": "^2.1.0",
 		"@nestjs/typeorm": "^9.0.1",
 		"@types/axios": "^0.14.0",
 		"axios": "^1.2.2",
+		"moment": "^2.29.4",
 		"object.pick": "^1.3.0",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
